# V12

./: CMakeLists.txt  CMakePresets.json  README.md  main.c  main.s  out.lmx
V12/: CMakeLists.txt
V12/include/V12/: CMakeLists.txt
V12/source/: CMakeLists.txt  Main.cpp  README.md
kubo/: CMakeLists.txt
kubo/include/kubo/: Assembler.hpp  CMakeLists.txt  Constructs.hpp  MemManip.hpp
kubo/source/: Assembler.cpp  CMakeLists.txt  Main.cpp
